--- a/GDD.tex
+++ b/GDD.tex
@@ -91,7 +91,7 @@ right=2.5 cm,
 	\section{Meta Progression}
 	
 	\begin{itemize}
-		\item \textbf{Unlockable Cards:} New cards added to the global pool after certain milestones.
+		\item \textbf{Unlockable Cards:} New cards added to the global pool after certain milestones or after obtaining them in a run.
 		
 		\item \textbf{Characters:} Unlock through progression, each with unique starting decks and playstyles.
 		
@@ -99,7 +99,7 @@ right=2.5 cm,
 		
 		\item \textbf{Codex / Lore Archive:} Unlocked via choices/events, slowly revealing the overarching narrative.
 		
-		\item \textbf{Difficulty Scaling:} Ascension-like system that unlocks tougher modifiers as players complete runs.
+		\item \textbf{Difficulty Scaling (Future):} Ascension-like system that unlocks tougher modifiers as players complete runs.
 	\end{itemize}
 	\section{Monetization}
 	
@@ -120,4 +120,9 @@ right=2.5 cm,
 			\subitem Newtonsoft.JSON - JSON Library
 			\item WASDEditor - Dialogues
 		\end{itemize}
+	\section{Inspirations}
+	\begin{itemize}
+		\item \href{https://www.inscryption.com}{Inscryption}
+		\item \href{https://www.nethack.org}{NetHack}
+	\end{itemize}
 \end{document}
