updated GDD again

--- a/GDD.tex
+++ b/GDD.tex
@@ -57,9 +57,9 @@ right=2.5 cm,
 	\pagebreak
 	\section{Core Gameplay}
 	\begin{itemize}
-		\item \textbf{Turn-Based Combat:} Players use a hand of cards drawn from their deck to battle enemies in strategic, turn-based encounters. Energy is spent to play cards, and unspent energy may have special synergy effects. Active cards may be sacrificed to gain additional energy.
+		\item \subsection{Turn-Based Combat} Players use a hand of cards drawn from their deck to battle enemies in strategic, turn-based encounters. Energy is spent to play cards, and unspent energy may have special synergy effects. Active cards may be sacrificed to gain additional energy.
 		
-		\item \textbf{Card Stats:}
+		\item \subsection{Card Stats}
 		\begin{itemize}
 			\item \textbf{Attack:} Deal direct damage.
 			\item \textbf{Health:} Health of the Cards.
@@ -67,7 +67,7 @@ right=2.5 cm,
 			\item \textbf{Spell:} Abilities which can either have positive or negative effects.
 		\end{itemize}
 		
-		\item \textbf{Deck Management:} 
+		\item \subsection{Deck Management} 
 		\begin{itemize}
 		\item Players will have an inventory with acquired cards and a deck. Players can freely exchange cards between the Deck and Inventory outside of battle.
 		\item Players can:
@@ -76,7 +76,7 @@ right=2.5 cm,
 			\item Fuse or corrupt cards for alternate versions at certain points.
 		\end{itemize}
 	    \end{itemize}
-		\item \textbf{Map Exploration:} Each run will have a procedurally generated map.
+		\item \subsection{Map Exploration} Each run will have a procedurally generated map.
 		\begin{itemize}
 			\item \textbf{Combat Encounters:} Normal, Mini Boss, Boss
 			\item \textbf{Event Nodes:} Narrative choices with rewards/penalties
@@ -84,29 +84,29 @@ right=2.5 cm,
 			\item \textbf{Forges:} Upgrade, craft, or combine cards
 		\end{itemize}
 		
-		\item \textbf{Characters (Future):} Multiple unlockable characters with distinct starting decks, abilities, and themes.
+		\item \subsection{Characters (Future)} Multiple unlockable characters with distinct starting decks, abilities, and themes.
 		
-		\item \textbf{Synergies:} Cards can synergize with eachother through .
+		\item \subsection{Synergies} Cards can synergize with eachother through .
 		\end{itemize}
 	\section{Meta Progression}
 	
 	\begin{itemize}
-		\item \textbf{Unlockable Cards:} New cards added to the global pool after certain milestones or after obtaining them in a run.
+		\item \subsection{Unlockable Cards} New cards added to the global pool after certain milestones or after obtaining them in a run.
 		
-		\item \textbf{Characters:} Unlock through progression, each with unique starting decks and playstyles.
+		\item \subsection{Characters (Future) } Unlock through progression, each with unique starting decks and playstyles.
 		
-		\item \textbf{Artifacts:} Permanent or run-specific passive bonuses (e.g., +1 max energy, double draw on first turn).
+		\item \subsection{Artifacts} Permanent or run-specific passive bonuses (e.g., +1 max energy, double draw on first turn).
 		
-		\item \textbf{Codex / Lore Archive:} Unlocked via choices/events, slowly revealing the overarching narrative.
+		\item \subsection{Codex / Lore Archive} Unlocked via choices/events, slowly revealing the overarching narrative.
 		
-		\item \textbf{Difficulty Scaling (Future):} Ascension-like system that unlocks tougher modifiers as players complete runs.
+		\item \subsection{Difficulty Scaling (Future)} Ascension-like system that unlocks tougher modifiers as players complete runs.
 	\end{itemize}
 	\section{Monetization}
 	
 	\begin{itemize}
-		\item \textbf{Open Source Premium Model (PC/Console):} One-time purchase for pre-compiled binaries, no in-game ads or microtransactions. Free access to source code (Aseprite's Monetization Model)
+		\item \subsection{Open Source Premium Model (PC/Console):} One-time purchase for pre-compiled binaries, no in-game ads or microtransactions. Free access to source code (Aseprite's Monetization Model)
 		
-		\item \textbf{Planned DLC:}
+		\item \subsection{Planned DLC (Future)}
 		\begin{itemize}
 			\item New characters, card sets, environments
 			\item Alternate campaigns or boss variants
