added feasibility and deadlines

--- a/GDD.tex
+++ b/GDD.tex
@@ -76,7 +76,9 @@ right=2.5 cm,
 			\item Fuse or corrupt cards for alternate versions at certain points.
 		\end{itemize}
 	    \end{itemize}
-		\item \subsection{Map Exploration} Each run will have a procedurally generated map.
+	    
+		\item \subsection{Map Exploration}
+		Each run will have a procedurally generated map.
 		\begin{itemize}
 			\item \textbf{Combat Encounters:} Normal, Mini Boss, Boss
 			\item \textbf{Event Nodes:} Narrative choices with rewards/penalties
@@ -115,14 +117,26 @@ right=2.5 cm,
 	
 	\section{Tech Stack}
 		\begin{itemize}
-			\item Unity 6000.0.48f1 [LTS] - Game Engine
-			\subitem LeanTween - Tweening
-			\subitem Newtonsoft.JSON - JSON Library
-			\item WASDEditor - Dialogues
+			\item \textbf{Unity 6000.0.48f1} [LTS] - Game Engine
+			\subitem \textbf{LeanTween} - Tweening
+			\subitem \textbf{Newtonsoft.JSON} - JSON Library
+			\item \textbf{WASDEditor} - Dialogues
 		\end{itemize}
 	\section{Inspirations}
 	\begin{itemize}
+		\item \href{https://www.figma.com/design/Zb3b7Vf4XvZ4UPItO0jaNE/Deck-Builder}{Design Moodboard}
 		\item \href{https://www.inscryption.com}{Inscryption}
 		\item \href{https://www.nethack.org}{NetHack}
+	\end{itemize}
+	
+	\section{Feasibility}
+	A barebones "First Draft" is possible to do with a couple hours of gameplay.
+	
+	\section{Deadlines}
+	\begin{itemize}
+	\item Basic Card System + Basic World Generation (7th June)
+	\item Enemy AI and Card battles, World Population, Player Movement (14th June)
+	\item Card Upgrades, Merging (20th June)
+	\item Lore (30th June) [Hopefully]
 	\end{itemize}
 \end{document}
