--- a/GDD.tex
+++ b/GDD.tex
@@ -64,7 +64,7 @@ right=2.5 cm,
 			\item \textbf{Attack:} Deal direct damage.
 			\item \textbf{Health:} Health of the Cards.
 			\item \textbf{Energy:} Determines how much energy is required to play the card.
-			\item \textbf{Spell:} Abilities which can either have positive or negative effects.
+			\item \textbf{Sigil:} Abilities which can either have positive or negative effects.
 		\end{itemize}
 		
 		\item \subsection{Deck Management} 
