updated links section

--- a/GDD.tex
+++ b/GDD.tex
@@ -124,11 +124,15 @@ right=2.5 cm,
 		\end{itemize}
 	\section{Inspirations}
 	\begin{itemize}
-		\item \href{https://www.figma.com/design/Zb3b7Vf4XvZ4UPItO0jaNE/Deck-Builder}{Design Moodboard}
 		\item \href{https://www.inscryption.com}{Inscryption}
 		\item \href{https://www.nethack.org}{NetHack}
 	\end{itemize}
 	
+	\section{Links}
+	\begin{itemize}
+		\item \href{https://www.figma.com/design/Zb3b7Vf4XvZ4UPItO0jaNE/Deck-Builder}{Design Moodboard}
+		\item \href{https://docs.google.com/spreadsheets/d/16LLjNDr2vdsV7ZZCh_UFrKlwE__lp5mAs24b4kD_r_s/edit?usp=sharing}{Brainstorming \& Balancing Sheet}
+	\end{itemize}
 	\section{Feasibility}
 	A barebones "First Draft" is possible to do with a couple hours of gameplay.
 	
